--- a/angular13/src/app/company/measure/measure-edit/measure-edit.component.html
+++ b/angular13/src/app/company/measure/measure-edit/measure-edit.component.html
@@ -10,21 +10,21 @@
         <div class="row">
 
             <div style="font-size: 80px; color: rgb(0, 0, 0); text-shadow: 0 0 1px #ff9900, 0 0 7px #f08e1f;">
-                <h1 style="text-align: center; margin-top: 20px;">{{this.MeaServices.UnitOfMeasureDto.name}}</h1>
+                <h1 style="text-align: center; margin-top: 20px;">{{name}}</h1>
             </div>
             <div>
 
-                <form [formGroup]="this.MeaServices.formInsert" class="form-group" class="col-12">
+                <form [formGroup]="form" class="form-group" class="col-12">
 
                     <div class="col">
                         <label>Medida</label>
                         <div class="container">
                             <div class="row">
                                 <div class="col">
-                                    <input type="text" class="form-control" formControlName="name" [ngClass]="{'is-invalid': MeaServices.ValidatorsSrv.touchedErrors('name', MeaServices.formInsert)}">
+                                    <input type="text" class="form-control" formControlName="name" [ngClass]="{'is-invalid': touchedErrors('name', form)}">
                                     <div class="invalid-feedback">
-                                        {{MeaServices.ValidatorsSrv.required2(this.MeaServices.formInsert, 'name', 'Nome', 3, 50)}}
-                                        <!-- OLD VERSION  {{MeaServices.ValidatorsSrv.required(this.MeaServices.formInsert,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
+                                        {{required(form, 'name', 'Nome', 3, 50)}}
+                                        <!-- OLD VERSION  {{required(form,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
                                     </div>
                                 </div>
                             </div>
@@ -35,10 +35,10 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col">
-                                    <input type="text" class="form-control" formControlName="description" [ngClass]="{'is-invalid': MeaServices.ValidatorsSrv.touchedErrors('description', MeaServices.formInsert)}">
+                                    <input type="text" class="form-control" formControlName="description" [ngClass]="{'is-invalid': touchedErrors('description', form)}">
                                     <div class="invalid-feedback">
-                                        {{MeaServices.ValidatorsSrv.required2(this.MeaServices.formInsert, 'description', 'Descrição', 3, 250)}}
-                                        <!-- OLD VERSION  {{MeaServices.ValidatorsSrv.required(this.MeaServices.formInsert,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
+                                        {{required(form, 'description', 'Descrição', 3, 250)}}
+                                        <!-- OLD VERSION  {{required(form,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
                                     </div>
 
                                 </div>
@@ -62,7 +62,7 @@
             <button class="btn btn-danger" (click)="doHide()">Cancelar</button>
         </div>
         <div class="col-6">
-            <button [disabled]="!this.MeaServices.formInsert.valid" id="label" class="btn btn-warning" style="color:rgb(0, 0, 0); float: right;" (click)="doHide()" (click)="MeaServices.updateAsync()">Atualizar</button>
+            <button [disabled]="!form.valid" id="label" class="btn btn-warning" style="color:rgb(0, 0, 0); float: right;" (click)="doHide()" (click)="update()">Atualizar</button>
         </div>
     </div>
 </div>
