--- a/angular13/src/app/company/shared/components/login/entrance/login.component.html
+++ b/angular13/src/app/company/shared/components/login/entrance/login.component.html
@@ -5,12 +5,13 @@
     <div style="text-align: center;">
         <div class="container">
             <div class="row justify-content-center">
-                <img src="../../../../../assets/maedit.png" class="p-1" style="width: 250px; height:250px; box-shadow: 0 0 3px #ff9900, 0 0 5px #000000;">
+                <!-- <img src="../../../../../assets/maedit.png" class="p-1" style="width: 250px; height:250px; box-shadow: 0 0 3px #ff9900, 0 0 5px #000000;"> -->
+                <h1>SEU LOGO</h1>
             </div>
         </div>
         <div class="justify-content-center" style="text-align:center;">
-            <h1 style="text-align:center;">MINAS AR</h1>
-            <small>Compresssores</small>
+            <h1 style="text-align:center;">SEU NEGOCIO</h1>
+            <small>Aqui</small>
             <div class="pt-3"></div>
         </div>
         <div>
