--- a/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
+++ b/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
@@ -17,7 +17,8 @@
                     <ul class="navbar-nav">
                         <div class="container" id="logo">
                             <div class="row justify-content-center">
-                                <img src="../../../../../assets/maedit.png" class="p-1" style="width:120px; height: 100px;">
+                                <!-- <img src="../../../../../assets/maedit.png" class="p-1" style="width:120px; height: 100px;"> -->
+                                <h2>Logo</h2>
                             </div>
                         </div>
                         <div class="justify-content-center" style="text-align:center;">
